# UDPSocket-ClientSide

./: .gitignore  CMakeLists.txt
assets/data/animations/: player.json
assets/data/maps/: map.json
src/: config.h  main.c
src/animation/: animation.c  animation.h
src/config/: Config.h
src/db/conexao/: conexao.c  conexao.h
src/db/login/: loginUser.c  loginUser.h  usuario.sql
src/engine/: engine.c  engine.h
src/game/: game.c  game.h  game_state.c  game_state.h
src/graphics/: texture.c
src/input/: input.c  input.h
src/login/: login.c  login.h
src/map/: map.c  map.h  map_loader.c  map_loader.h
src/net/: net.c  net.h  protocol.h
src/protocol/: protocol.h
src/render/: map_render.c  map_render.h  players_render.c  players_render.h  render.c  render.h  render_objects.c  render_objects.h  tilemap.c  tilemap.h
src/screens/: screen.c  screen.h
src/screens/game/: game.c  game.h
src/screens/login/: login.c  login.h
src/usuario/: usuario.h
src/verification/nameServer/: verificationName.c  verificationName.h
